# R01_HSC_NI_system

./: .gitignore  README.md
CppUdpClient/: CppUdpClient.sln  UdpClient.h  main.cpp
Kian/UPC_R01_grantKianVersion/source/: Cmn4Dir_LtoR.cpp  Cmn4Dir_RtoL.cpp  HmParam.cpp  Utilities.cpp  reflex_rack.cpp  reflex_single_muscle.cpp
MuscleModelLibrary/: MuscleModelLib.cbp  MuscleModelLib.depend  MuscleModelLib.layout  main.cpp  main2.cpp  main3.cpp  main4.cpp
MuscleModelLibrary/include/: MM_HT_Biewener.h  MM_HillType.h  MM_LowPassFilter.h  Utility.h
MuscleModelLibrary/src/: MM_HT_Biewener.cpp  MM_HillType.cpp  MM_LowPassFilter.cpp  Utility.cpp
New folder/: cad-hfs-datasharing.vfs
OneServerTwoPorts/: OneServerTwoPorts.sln  UdpClient.h  main.cpp
Pertubot/LuaUDPReceive/: receiveUdp.lua
Pertubot/LuaUDPSend/: Main.cpp  sendUdp.lua
SpinalNoFpga/HSC_cvi/src/: GetStateMatrixFromSignals.h  M1.cws  TestSriJohn.h
SpinalNoFpga/UPC_R01_grant/source/: CmakeLists_EmgNotLib.txt  Cmn4Dir_ForceField.cpp  Cmn4Dir_Forward.cpp  Cmn4Dir_Viscosity.cpp  ReadParadigm.cpp  Utilities.cpp  cmn4dir_startle.cpp  cmn4dir_startleAsBeep.cpp  cmn4dir_startle_working.cpp  mainToUse.cpp  reflex_rack.cpp  reflex_single_muscle.cpp  reflex_single_muscle.cpp.orig
T5-NatN-misc/: natn_plant_plotter.m
ZZZ_other_code/IEEE_Project_V2/UPC_R01_grant/source/: CMakeLists.txt  Cmn4Dir_Forward_Lateral.cpp  OGLGraph.cpp  PxiDAQ.cpp  reflex_rack.cpp
ZZZ_other_code/IEEE_Project_V2/UPC_R01_grant/source/include/: OGLGraph.h  Utilities.h  glut.h
ZZZ_other_code/IEEE_Project_V2/UPC_R01_grant/source/modules/: FindGLUT.cmake
ZZZ_other_code/nerf-c/exp_filtering/: .cproject  .project
ZZZ_other_code/nerf-c/izh finger/: .cproject  .project
ZZZ_other_code/nerf-c/motor_unit_mdl/: calc_filter_coeff.mdl  dystonia_emg.mdl  dystonia_emg.mdl.original  emg_filter.m  emg_spasticity.mdl  emg_spasticity_plotter.m  filter_coef.m  get_active_function_coeff.m  increment.mdl  incrementVars.m  izh.cpp  izh.mexmaci64  izh.mexw32  monosyn_multiscale.mdl  motor_unit.mdl  muscle.cpp  nips_plotter.m  rasterplot.m  recruitment_pattern_plotter.m  set_mu.m  set_mu_spasticity.m  set_trfcn.m  size_principle.mdl  size_principle_spasticity.mdl  spasticity_emg_data.mat  spasticity_emg_data01.mat  twitch_filter.m
ZZZ_other_code/nerf-c/spindle/: .cproject  .project
ZZZ_other_code/nerf-py/: css_term_test.py  expression.py  expression2verilog.py  generate_lut.py  generate_ramp.py  generate_sin.py  generate_triangle.py  gto.py  integrator_test.py  integrator_test_internal_clk.py  integrator_test_pipein_pipeout.py  izhikevich.py  loop_test.py  nerf_exp_testing.py  nerf_feature_testing.py  nerf_mvc.py  pipeout_test.py  pps_to_spike_test_internal_clk.py  sleep_sort.py  spindle.py  spindle_testing.py
ZZZ_other_code/nerf-py/muscle/: generate_active_force.py  generate_force_length.py  generate_spikes.py  generate_stretch.py  generate_total_force.py  transfer_func_active_state.m
ZZZ_other_code/nerf-py/spindle/: Loeb_spindle_ramphold_d40_s40.mat  Loeb_spindle_ramphold_d40_s80.mat  Loeb_spindle_ramphold_d80_s40.mat  (+8 more)
cad-hfs-filesystem/: cad-hfs-datasharing.vfs
mc_cadaver/: Controller.cpp  Controller.h  KinematicPerturbation.cpp  KinematicPerturbation.h  main.cpp
t5-bbld-sangerlab-pertubot/: HelloHapticDevice.cpp  TimeData.h
(+446 files in other folders)
